--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -472,90 +472,7 @@ body img{
                         });
                      </script>
                         
-						<script>
-							$(document).ready(function() {
-								// Fetch user data and display welcome message
-								$.ajax({
-									url: '/BackEnd/Hello/',
-									type: 'GET',
-									success: function(data) {
-										if (data.error) {
-											console.error('Error:', data.error);
-										} else {
-											$('#welcome').text('Hello ' + data.Username + '! (' + data.Age_group + ')');
-										}
-									},
-									error: function(xhr, status, error) {
-										document.getElementById("errorPopUp").style.display = "block";
-										console.error('Error:', error);
-									}
-								});
 						
-								// Function to generate HTML for a single game
-								function generateGameHtml(game) {
-									return `
-									<div class="col-lg-4 col-md-6 text-center game-item" data-game-id="${game.id}">
-											<div class="single-product-item">
-												<button class="remove-game" data-id="${game.id}"><i class="glyphicon glyphicon-remove" aria-hidden="true"></i></button>
-												<div class="product-image">
-													<a href="${game.url}" class="urls"><img src="${game.icon_url}" alt="" class="imgs"></a>
-												</div>
-												<h3 class="names">${game.name}</h3>
-												<a href="#" class="cart-btn more-info-btn">More info</a>
-
-											</div>
-										</div>`;
-								}
-								$('#favoriteGamesContainer').on('click', '.more-info-btn', function(e) {
-									e.preventDefault();
-									selectedGameId = $(this).closest('.game-item').data('game-id');
-									window.location.href = `/game_info_page/${selectedGameId}/`;
-								});
-						
-								// AJAX request to get favorite games
-								$.ajax({
-									url: '/BackEnd/favorite_games/',
-									type: 'GET',
-									dataType: 'json',
-									success: function(data) {
-										if ('games' in data) {
-											var gamesHtml = '';
-											$.each(data.games, function(index, game) {
-												gamesHtml += generateGameHtml(game);
-											});
-											$('#favoriteGamesContainer').html(gamesHtml);
-										} else {
-											console.error('Error getting favorite games:', data.error);
-										}
-									},
-									error: function(error) {
-										console.error('Error getting favorite games:', error);
-									}
-								});
-							});
-						
-							// Handle remove game button click
-							$(document).on('click', '.remove-game', function() {
-								var button = $(this);
-								var gameId = button.data('id');
-						
-								// AJAX request to remove the game
-								$.ajax({
-									url: `/BackEnd/remove_favorite/${gameId}/`,
-									type: 'GET',
-									dataType: 'json',
-									success: function(data) {
-										console.log('Game removed successfully:', data);
-										
-										// Update the UI as needed (e.g., remove the game from the DOM)
-										button.closest('.single-product-item').remove();
-									},
-									error: function(error) {
-										console.error('Error removing game:', error);
-									}
-								});
-							});
-						</script>						
 					</div>
 				</div>
 			</div>
@@ -600,12 +517,12 @@ body img{
 			</div>
 			
 						
-			<!--<div class="row">
+			<div class="row">
 				<div class="col-lg-12 text-center">
-					<div class="pagination-wrap">-
+					<div class="pagination-wrap">
 						<ul>
 
-						</ul>-->
+						</ul>
 					</div>
 				</div>
 			</div>
